testsuite/tests/polykinds/T11142.stderr

T11142.hs:9:49: error:
    • Expected kind ‘k1’, but ‘b’ has kind ‘k0’
    • In the second argument of ‘SameKind’, namely ‘b’
      In the type signature:
        foo :: forall b. (forall k (a :: k). SameKind a b) -> ()
